--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,9 +7,9 @@
     tools:context="com.asmjahid.myblog.MainActivity">
 
     <android.support.v7.widget.RecyclerView
+        android:id="@+id/blog_list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/blog_list">
+        android:layout_height="wrap_content">
     </android.support.v7.widget.RecyclerView>
 
 </RelativeLayout>
