--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -9,7 +9,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.wagnercsfilho.fireblogr.activity.SettingsActivity">
+    tools:context=".activity.SettingsActivity">
 
     <ImageButton
         app:srcCompat="@android:drawable/ic_menu_gallery"
